include_directories(libsrtp/include)
set(TEST_APPS OFF CACHE INTERNAL "")
add_subdirectory(libsrtp)
unset(TEST_APPS)

include_directories(. .. ../base ../ssl ../event ../util ../evpp ../cpputil)
file(GLOB RTC_SRCS *.cpp *.hpp rtcp/*.cpp rtcp/*.h)
# aux_source_directory(. RTC_SRCS)
add_executable(rtc_server ${RTC_SRCS})
target_link_libraries(rtc_server srtp2 ${HV_LIBRARIES})
