include_directories(libsrtp/include)
set(ENABLE_OPENSSL ON CACHE INTERNAL "")
set(TEST_APPS OFF CACHE INTERNAL "")
add_subdirectory(libsrtp)
unset(TEST_APPS)

include_directories(. .. ../base ../ssl ../event ../util ../evpp ../cpputil ../http)
file(GLOB RTC_SRCS *.cpp *.hpp *.h rtcp/*.cpp rtcp/*.h Utils/*.cpp Utils/*.h)
# aux_source_directory(. RTC_SRCS)
add_executable(rtc_server ${RTC_SRCS})
target_link_libraries(rtc_server srtp2 ${HV_LIBRARIES})
